--- a/src/component/UserCard/UserCard.module.css
+++ b/src/component/UserCard/UserCard.module.css
@@ -37,11 +37,27 @@
 
 .userPhoto{
     width: 80px;
+    border: 8px solid var(--lightColor);
+    box-shadow: var(--lineShadow);
+    border-radius: 50%;
     z-index: 1;
 
     position: absolute;
-    top: 184px;
+    top: 180px;
 }
+
+/* .userPhoto:before {
+    display: block;
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    pointer-events: none;
+    box-shadow: var(--lineShadow);
+} */
 
 .infoBlock {
     text-transform: uppercase;
@@ -75,8 +91,8 @@
     transition: 250ms;
 }
 
-.btnFollow:hover,
-.btnFollow:focus{
+.btnFollow:hover
+{
     background-color: var(--seondaryBtn);
 }
 
@@ -85,7 +101,6 @@
     background-color: var(--seondaryBtn);
 }
 
-.btnFollowing:hover,
-.btnFollowing:focus {
+.btnFollowing:hover {
     background-color: var(--lightColor);
 }
